--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "build:extension": "yarn build && cp src/manifest.json dist/",
     "preview": "vite preview"
   },
   "dependencies": {
